--- a/housePriceAnalise.ipynb
+++ b/housePriceAnalise.ipynb
@@ -70,8 +70,8 @@
     "X_train['MSSubClass'] = X_train['MSSubClass'].astype(str)\n",
     "X_train = pd.get_dummies(X_train, drop_first=True)\n",
     "\n",
-    "print(\"Размер таблицы X_train:\", X_train.shape)\n",
-    "print(\"Пропусков:\", X_train.isnull().sum().sum())"
+    "print(\"X_train table size:\", X_train.shape)\n",
+    "print(\"NA:\", X_train.isnull().sum().sum())"
    ]
   },
   {
@@ -98,8 +98,8 @@
     "X_test['MSSubClass'] = X_test['MSSubClass'].astype(str)\n",
     "X_test = pd.get_dummies(X_test, drop_first=True)\n",
     "\n",
-    "print(\"Размер таблицы X_test:\", X_test.shape)\n",
-    "print(\"Пропусков:\", X_test.isnull().sum().sum())"
+    "print(\"X_test table size:\", X_test.shape)\n",
+    "print(\"NA:\", X_test.isnull().sum().sum())"
    ]
   },
   {
@@ -135,19 +135,19 @@
     "housePriceModel.fit(X_train, Y_train)\n",
     "end = time.time()\n",
     "\n",
-    "print(f\"\\nОбучение заняло: {end - start:.3f} секунд\")\n",
+    "print(f\"\\nTraining finished in: {end - start:.3f} seconds\")\n",
     "\n",
     "predictions = housePriceModel.predict(X_test)\n",
     "\n",
     "mae = mean_absolute_error(Y_test, predictions)\n",
     "\n",
-    "print(f\"Средняя ошибка: {mae:,.2f} долларов\") \n",
+    "print(f\"MedinAverage error {mae:,.2f} dollars\") \n",
     "\n",
     "feature_importance = pd.DataFrame({\n",
     "    'feature': X_train.columns,\n",
     "    'importance': housePriceModel.feature_importances_\n",
     "})\n",
-    "print(\"\\nВажность признаков:\")\n",
+    "print(\"\\nImportance of features:\")\n",
     "print(feature_importance.sort_values('importance', ascending=False).head(10))"
    ]
   }
