--- a/housePriceAnalise.ipynb
+++ b/housePriceAnalise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -20,21 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('data/train.csv')\n",
-    "test_dfX = pd.read_csv('data/test.csv')\n",
-    "test_dfY = pd.read_csv('data/sample_submission.csv')\n",
-    "n_train = train_df.shape[0]\n",
-    "filter_df = pd.concat([train_df, test_dfX], ignore_index=True)"
+    "train_df = pd.read_csv('data/train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -48,12 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "06b3ed4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X table size: (1460, 111)\n",
+      "NA: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "X_train = train_df[[\n",
+    "X = train_df[[\n",
     "    'MSSubClass', 'MSZoning', 'LotArea', 'Utilities', 'Neighborhood',\n",
     "    'Condition1', 'OverallQual', 'OverallCond', 'YearRemodAdd', 'Exterior1st',\n",
     "    'ExterCond', 'Foundation', 'HeatingQC', 'Electrical', '1stFlrSF', 'Functional',\n",
@@ -61,64 +66,76 @@
     "]].copy()\n",
     "\n",
     "imputer = SimpleImputer(strategy='constant', fill_value='NA')\n",
-    "X_train[[\n",
+    "X[[\n",
     "    'Electrical', 'GarageQual', 'PoolQC', 'Fence', 'MiscFeature'\n",
-    "]] = imputer.fit_transform(X_train[[\n",
+    "]] = imputer.fit_transform(X[[\n",
     "    'Electrical', 'GarageQual', 'PoolQC', 'Fence', 'MiscFeature'\n",
     "]])\n",
     "\n",
-    "X_train['MSSubClass'] = X_train['MSSubClass'].astype(str)\n",
-    "X_train = pd.get_dummies(X_train, drop_first=True)\n",
+    "X['MSSubClass'] = X['MSSubClass'].astype(str)\n",
+    "X = pd.get_dummies(X, drop_first=True)\n",
     "\n",
-    "print(\"X_train table size:\", X_train.shape)\n",
-    "print(\"NA:\", X_train.isnull().sum().sum())"
+    "print(\"X table size:\", X.shape)\n",
+    "print(\"NA:\", X.isnull().sum().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e30eab5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test = test_dfX[[\n",
-    "    'MSSubClass', 'MSZoning', 'LotArea', 'Utilities', 'Neighborhood',\n",
-    "    'Condition1', 'OverallQual', 'OverallCond', 'YearRemodAdd', 'Exterior1st',\n",
-    "    'ExterCond', 'Foundation', 'HeatingQC', 'Electrical', '1stFlrSF', 'Functional',\n",
-    "    'GarageQual', 'PoolQC', 'Fence', 'MiscFeature', 'MiscVal'\n",
-    "]].copy()\n",
-    "\n",
-    "imputer = SimpleImputer(strategy='constant', fill_value='NA')\n",
-    "X_test[[\n",
-    "    'Electrical', 'GarageQual', 'PoolQC', 'Fence', 'MiscFeature'\n",
-    "]] = imputer.fit_transform(X_test[[\n",
-    "    'Electrical', 'GarageQual', 'PoolQC', 'Fence', 'MiscFeature'\n",
-    "]])\n",
-    "\n",
-    "X_test['MSSubClass'] = X_test['MSSubClass'].astype(str)\n",
-    "X_test = pd.get_dummies(X_test, drop_first=True)\n",
-    "\n",
-    "print(\"X_test table size:\", X_test.shape)\n",
-    "print(\"NA:\", X_test.isnull().sum().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_train = train_df[['SalePrice']].copy()\n",
-    "Y_test = test_dfY[['SalePrice']].copy()"
+    "Y = train_df[['SalePrice']].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11e3cb74",
+   "execution_count": 51,
+   "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "11e3cb74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training finished in: 0.116 seconds\n",
+      "MedinAverage error 22,035.59 dollars\n",
+      "\n",
+      "Importance of features:\n",
+      "                 feature  importance\n",
+      "1            OverallQual    0.203651\n",
+      "4               1stFlrSF    0.157543\n",
+      "0                LotArea    0.106462\n",
+      "3           YearRemodAdd    0.072218\n",
+      "76      Foundation_PConc    0.060387\n",
+      "14         MSSubClass_60    0.040465\n",
+      "40  Neighborhood_NridgHt    0.030399\n",
+      "2            OverallCond    0.020618\n",
+      "83          HeatingQC_TA    0.018710\n",
+      "68   Exterior1st_VinylSd    0.018436\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/sklearn/base.py:1365: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "housePriceModel = RandomForestRegressor(\n",
     "    n_estimators=50,\n",
