--- a/housePriceAnalise.ipynb
+++ b/housePriceAnalise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 155,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 156,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 157,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 158,
    "id": "06b3ed4a",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 159,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 160,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 161,
    "id": "11e3cb74",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training finished in: 0.116 seconds\n",
+      "Training finished in: 0.057 seconds\n",
       "MedinAverage error 22,035.59 dollars\n",
       "\n",
       "Importance of features:\n",
@@ -166,6 +166,25 @@
     "})\n",
     "print(\"\\nImportance of features:\")\n",
     "print(feature_importance.sort_values('importance', ascending=False).head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "46da69d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model mistaken by: 12.14 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Model mistaken by:\",round((mae / np.mean(Y_train)) * 100, 2), \"%\")\n",
+    "#print(\"Model mistaken by:\",((mae / np.mean(Y_train)) * 100), \"%\")"
    ]
   }
  ],
