--- a/housePriceAnalise.ipynb
+++ b/housePriceAnalise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 203,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 204,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 205,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 206,
    "id": "06b3ed4a",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 207,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 208,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -101,32 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 209,
    "id": "11e3cb74",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Training finished in: 0.057 seconds\n",
-      "MedinAverage error 22,035.59 dollars\n",
-      "\n",
-      "Importance of features:\n",
-      "                 feature  importance\n",
-      "1            OverallQual    0.203651\n",
-      "4               1stFlrSF    0.157543\n",
-      "0                LotArea    0.106462\n",
-      "3           YearRemodAdd    0.072218\n",
-      "76      Foundation_PConc    0.060387\n",
-      "14         MSSubClass_60    0.040465\n",
-      "40  Neighborhood_NridgHt    0.030399\n",
-      "2            OverallCond    0.020618\n",
-      "83          HeatingQC_TA    0.018710\n",
-      "68   Exterior1st_VinylSd    0.018436\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -134,11 +112,33 @@
       "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/sklearn/base.py:1365: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  return fit_method(estimator, *args, **kwargs)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training finished in: 4.387 seconds\n",
+      "MedinAverage error 21,624.77 dollars\n",
+      "\n",
+      "Importance of features:\n",
+      "                 feature  importance\n",
+      "1            OverallQual    0.195137\n",
+      "4               1stFlrSF    0.157645\n",
+      "0                LotArea    0.099688\n",
+      "3           YearRemodAdd    0.088516\n",
+      "76      Foundation_PConc    0.051704\n",
+      "14         MSSubClass_60    0.040036\n",
+      "40  Neighborhood_NridgHt    0.036746\n",
+      "39  Neighborhood_NoRidge    0.022624\n",
+      "75     Foundation_CBlock    0.020812\n",
+      "2            OverallCond    0.018858\n"
+     ]
     }
    ],
    "source": [
     "housePriceModel = RandomForestRegressor(\n",
-    "    n_estimators=50,\n",
+    "    n_estimators=5000,\n",
     "    max_depth=None,\n",
     "    min_samples_split=2,\n",
     "    min_samples_leaf=1,\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 210,
    "id": "46da69d8",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model mistaken by: 12.14 %\n"
+      "Model mistaken by: 11.92 %\n"
      ]
     }
    ],
