--- a/housePriceAnalise.ipynb
+++ b/housePriceAnalise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 276,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 277,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 278,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 279,
    "id": "06b3ed4a",
    "metadata": {},
    "outputs": [
@@ -59,17 +59,42 @@
    ],
    "source": [
     "X = train_df[[\n",
-    "    'MSSubClass', 'MSZoning', 'LotArea', 'Utilities', 'Neighborhood',\n",
-    "    'Condition1', 'OverallQual', 'OverallCond', 'YearRemodAdd', 'Exterior1st',\n",
-    "    'ExterCond', 'Foundation', 'HeatingQC', 'Electrical', '1stFlrSF', 'Functional',\n",
-    "    'GarageQual', 'PoolQC', 'Fence', 'MiscFeature', 'MiscVal'\n",
+    "    'MSSubClass',\n",
+    "    'MSZoning',\n",
+    "    'LotArea', \n",
+    "    'Utilities', \n",
+    "    'Neighborhood',\n",
+    "    'Condition1', \n",
+    "    'OverallQual', \n",
+    "    'OverallCond', \n",
+    "    'YearRemodAdd', \n",
+    "    'Exterior1st',\n",
+    "    'ExterCond', \n",
+    "    'Foundation', \n",
+    "    'HeatingQC', \n",
+    "    'Electrical', \n",
+    "    '1stFlrSF', \n",
+    "    'Functional',\n",
+    "    'GarageQual', \n",
+    "    'PoolQC', \n",
+    "    'Fence', \n",
+    "    'MiscFeature', \n",
+    "    'MiscVal'\n",
     "]].copy()\n",
     "\n",
     "imputer = SimpleImputer(strategy='constant', fill_value='NA')\n",
     "X[[\n",
-    "    'Electrical', 'GarageQual', 'PoolQC', 'Fence', 'MiscFeature'\n",
+    "    'Electrical', \n",
+    "    'GarageQual', \n",
+    "    'PoolQC', \n",
+    "    'Fence', \n",
+    "    'MiscFeature'\n",
     "]] = imputer.fit_transform(X[[\n",
-    "    'Electrical', 'GarageQual', 'PoolQC', 'Fence', 'MiscFeature'\n",
+    "    'Electrical', \n",
+    "    'GarageQual', \n",
+    "    'PoolQC', \n",
+    "    'Fence', \n",
+    "    'MiscFeature'\n",
     "]])\n",
     "\n",
     "X['MSSubClass'] = X['MSSubClass'].astype(str)\n",
@@ -81,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 280,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -91,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 281,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -101,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 286,
    "id": "11e3cb74",
    "metadata": {},
    "outputs": [
@@ -118,7 +143,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training finished in: 4.387 seconds\n",
+      "Training finished in: 3.983 seconds\n",
       "MedinAverage error 21,624.77 dollars\n",
       "\n",
       "Importance of features:\n",
@@ -128,11 +153,14 @@
       "0                LotArea    0.099688\n",
       "3           YearRemodAdd    0.088516\n",
       "76      Foundation_PConc    0.051704\n",
-      "14         MSSubClass_60    0.040036\n",
-      "40  Neighborhood_NridgHt    0.036746\n",
-      "39  Neighborhood_NoRidge    0.022624\n",
-      "75     Foundation_CBlock    0.020812\n",
-      "2            OverallCond    0.018858\n"
+      "..                   ...         ...\n",
+      "82          HeatingQC_Po    0.000025\n",
+      "87         Electrical_NA    0.000024\n",
+      "55       Condition1_RRNe    0.000020\n",
+      "25  Neighborhood_Blueste    0.000009\n",
+      "86        Electrical_Mix    0.000000\n",
+      "\n",
+      "[111 rows x 2 columns]\n"
      ]
     }
    ],
@@ -165,12 +193,12 @@
     "    'importance': housePriceModel.feature_importances_\n",
     "})\n",
     "print(\"\\nImportance of features:\")\n",
-    "print(feature_importance.sort_values('importance', ascending=False).head(10))"
+    "print(feature_importance.sort_values('importance', ascending=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 283,
    "id": "46da69d8",
    "metadata": {},
    "outputs": [
