--- a/housePriceAnalise.ipynb
+++ b/housePriceAnalise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 374,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 375,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 376,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,13 @@
     "#train_df[['MSSubClass', 'MSZoning', 'LotArea', 'Utilities', 'Neighborhood',\n",
     "#'Condition1', 'OverallQual', 'OverallCond', 'YearRemodAdd', 'Exterior1st',\n",
     "#'ExterCond', 'Foundation', 'HeatingQC', 'Electrical', '1stFlrSF', 'Functional',\n",
-    "#'GarageQual', 'PoolQC', 'Fence', 'MiscFeature', 'MiscVal']].isnull().sum()"
+    "#'GarageQual', 'PoolQC', 'Fence', 'MiscFeature', 'MiscVal', 'SaleCondition',\n",
+    "#'YrSold']].isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 377,
    "id": "06b3ed4a",
    "metadata": {},
    "outputs": [
@@ -52,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X table size: (1460, 111)\n",
+      "X table size: (1460, 117)\n",
       "NA: 0\n"
      ]
     }
@@ -73,13 +74,16 @@
     "    'Foundation', \n",
     "    'HeatingQC', \n",
     "    'Electrical', \n",
-    "    '1stFlrSF', \n",
+    "    #'1stFlrSF',\n",
+    "    'GrLivArea',\n",
     "    'Functional',\n",
     "    'GarageQual', \n",
     "    'PoolQC', \n",
     "    'Fence', \n",
     "    'MiscFeature', \n",
-    "    'MiscVal'\n",
+    "    'MiscVal',\n",
+    "    'SaleCondition',\n",
+    "    'YrSold'\n",
     "]].copy()\n",
     "\n",
     "imputer = SimpleImputer(strategy='constant', fill_value='NA')\n",
@@ -106,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 378,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 379,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 380,
    "id": "11e3cb74",
    "metadata": {},
    "outputs": [
@@ -143,30 +147,41 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training finished in: 3.983 seconds\n",
-      "MedinAverage error 21,624.77 dollars\n",
+      "Training finished in: 4.324 seconds\n",
+      "MedinAverage error 20,982.85 dollars\n",
       "\n",
-      "Importance of features:\n",
-      "                 feature  importance\n",
-      "1            OverallQual    0.195137\n",
-      "4               1stFlrSF    0.157645\n",
-      "0                LotArea    0.099688\n",
-      "3           YearRemodAdd    0.088516\n",
-      "76      Foundation_PConc    0.051704\n",
-      "..                   ...         ...\n",
-      "82          HeatingQC_Po    0.000025\n",
-      "87         Electrical_NA    0.000024\n",
-      "55       Condition1_RRNe    0.000020\n",
-      "25  Neighborhood_Blueste    0.000009\n",
-      "86        Electrical_Mix    0.000000\n",
-      "\n",
-      "[111 rows x 2 columns]\n"
+      "Importance:\n",
+      "base_feature\n",
+      "OverallQual      0.184953\n",
+      "GrLivArea        0.173640\n",
+      "Neighborhood     0.113855\n",
+      "LotArea          0.090326\n",
+      "YearRemodAdd     0.083383\n",
+      "Foundation       0.068314\n",
+      "MSSubClass       0.056831\n",
+      "Exterior1st      0.042960\n",
+      "SaleCondition    0.030475\n",
+      "MSZoning         0.023972\n",
+      "HeatingQC        0.020918\n",
+      "GarageQual       0.020433\n",
+      "OverallCond      0.017633\n",
+      "YrSold           0.016218\n",
+      "Fence            0.011771\n",
+      "Condition1       0.010581\n",
+      "ExterCond        0.009595\n",
+      "Functional       0.007968\n",
+      "PoolQC           0.007018\n",
+      "Electrical       0.006341\n",
+      "MiscFeature      0.001633\n",
+      "MiscVal          0.001161\n",
+      "Utilities        0.000020\n",
+      "Name: importance, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "housePriceModel = RandomForestRegressor(\n",
-    "    n_estimators=5000,\n",
+    "    n_estimators=5500,\n",
     "    max_depth=None,\n",
     "    min_samples_split=2,\n",
     "    min_samples_leaf=1,\n",
@@ -189,16 +204,21 @@
     "print(f\"MedinAverage error {mae:,.2f} dollars\") \n",
     "\n",
     "feature_importance = pd.DataFrame({\n",
-    "    'feature': X_train.columns,\n",
+    "    'feature': X.columns,\n",
     "    'importance': housePriceModel.feature_importances_\n",
     "})\n",
-    "print(\"\\nImportance of features:\")\n",
-    "print(feature_importance.sort_values('importance', ascending=False))"
+    "\n",
+    "feature_importance['base_feature'] = feature_importance['feature'].apply(lambda x: x.split('_')[0])\n",
+    "\n",
+    "aggregated_importance = feature_importance.groupby('base_feature')['importance'].sum().sort_values(ascending=False)\n",
+    "\n",
+    "print(\"\\nImportance:\")\n",
+    "print(aggregated_importance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 381,
    "id": "46da69d8",
    "metadata": {},
    "outputs": [
@@ -206,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model mistaken by: 11.92 %\n"
+      "Model mistaken by: 11.56 %\n"
      ]
     }
    ],
