--- a/housePriceAnalise.ipynb
+++ b/housePriceAnalise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 390,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 391,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 392,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 393,
    "id": "06b3ed4a",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X table size: (1460, 117)\n",
+      "X table size: (1460, 111)\n",
       "NA: 0\n"
      ]
     }
@@ -81,9 +81,9 @@
     "    'PoolQC', \n",
     "    'Fence', \n",
     "    'MiscFeature', \n",
-    "    'MiscVal',\n",
-    "    'SaleCondition',\n",
-    "    'YrSold'\n",
+    "    'MiscVal'\n",
+    "    #'SaleCondition'\n",
+    "    #'YrSold'\n",
     "]].copy()\n",
     "\n",
     "imputer = SimpleImputer(strategy='constant', fill_value='NA')\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 394,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 395,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 396,
    "id": "11e3cb74",
    "metadata": {},
    "outputs": [
@@ -147,34 +147,32 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training finished in: 4.324 seconds\n",
-      "MedinAverage error 20,982.85 dollars\n",
+      "Training finished in: 4.218 seconds\n",
+      "MedinAverage error 20,629.48 dollars\n",
       "\n",
       "Importance:\n",
       "base_feature\n",
-      "OverallQual      0.184953\n",
-      "GrLivArea        0.173640\n",
-      "Neighborhood     0.113855\n",
-      "LotArea          0.090326\n",
-      "YearRemodAdd     0.083383\n",
-      "Foundation       0.068314\n",
-      "MSSubClass       0.056831\n",
-      "Exterior1st      0.042960\n",
-      "SaleCondition    0.030475\n",
-      "MSZoning         0.023972\n",
-      "HeatingQC        0.020918\n",
-      "GarageQual       0.020433\n",
-      "OverallCond      0.017633\n",
-      "YrSold           0.016218\n",
-      "Fence            0.011771\n",
-      "Condition1       0.010581\n",
-      "ExterCond        0.009595\n",
-      "Functional       0.007968\n",
-      "PoolQC           0.007018\n",
-      "Electrical       0.006341\n",
-      "MiscFeature      0.001633\n",
-      "MiscVal          0.001161\n",
-      "Utilities        0.000020\n",
+      "OverallQual     0.193883\n",
+      "GrLivArea       0.182295\n",
+      "Neighborhood    0.117920\n",
+      "LotArea         0.096468\n",
+      "YearRemodAdd    0.088403\n",
+      "Foundation      0.072249\n",
+      "MSSubClass      0.058688\n",
+      "Exterior1st     0.046121\n",
+      "MSZoning        0.023986\n",
+      "HeatingQC       0.021920\n",
+      "GarageQual      0.020546\n",
+      "OverallCond     0.018355\n",
+      "Fence           0.012837\n",
+      "Condition1      0.011076\n",
+      "ExterCond       0.010087\n",
+      "Functional      0.008384\n",
+      "PoolQC          0.007308\n",
+      "Electrical      0.006542\n",
+      "MiscFeature     0.001684\n",
+      "MiscVal         0.001220\n",
+      "Utilities       0.000028\n",
       "Name: importance, dtype: float64\n"
      ]
     }
@@ -218,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 397,
    "id": "46da69d8",
    "metadata": {},
    "outputs": [
@@ -226,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model mistaken by: 11.56 %\n"
+      "Model mistaken by: 11.37 %\n"
      ]
     }
    ],
