--- a/housePriceAnalise.ipynb
+++ b/housePriceAnalise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 422,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 423,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 424,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 425,
    "id": "06b3ed4a",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X table size: (1460, 111)\n",
+      "X table size: (1460, 110)\n",
       "NA: 0\n"
      ]
     }
@@ -63,7 +63,7 @@
     "    'MSSubClass',\n",
     "    'MSZoning',\n",
     "    'LotArea', \n",
-    "    'Utilities', \n",
+    "    #'Utilities', \n",
     "    'Neighborhood',\n",
     "    'Condition1', \n",
     "    'OverallQual', \n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 426,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 427,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 428,
    "id": "11e3cb74",
    "metadata": {},
    "outputs": [
@@ -147,32 +147,31 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training finished in: 4.218 seconds\n",
-      "MedinAverage error 20,629.48 dollars\n",
+      "Training finished in: 5.020 seconds\n",
+      "MedinAverage error 20,628.55 dollars\n",
       "\n",
       "Importance:\n",
       "base_feature\n",
-      "OverallQual     0.193883\n",
-      "GrLivArea       0.182295\n",
-      "Neighborhood    0.117920\n",
-      "LotArea         0.096468\n",
-      "YearRemodAdd    0.088403\n",
-      "Foundation      0.072249\n",
-      "MSSubClass      0.058688\n",
-      "Exterior1st     0.046121\n",
-      "MSZoning        0.023986\n",
-      "HeatingQC       0.021920\n",
-      "GarageQual      0.020546\n",
-      "OverallCond     0.018355\n",
-      "Fence           0.012837\n",
-      "Condition1      0.011076\n",
-      "ExterCond       0.010087\n",
-      "Functional      0.008384\n",
-      "PoolQC          0.007308\n",
-      "Electrical      0.006542\n",
-      "MiscFeature     0.001684\n",
-      "MiscVal         0.001220\n",
-      "Utilities       0.000028\n",
+      "OverallQual     0.196600\n",
+      "GrLivArea       0.182282\n",
+      "Neighborhood    0.115569\n",
+      "LotArea         0.096518\n",
+      "YearRemodAdd    0.089928\n",
+      "Foundation      0.071727\n",
+      "MSSubClass      0.057885\n",
+      "Exterior1st     0.045428\n",
+      "MSZoning        0.024404\n",
+      "HeatingQC       0.021536\n",
+      "GarageQual      0.020632\n",
+      "OverallCond     0.018429\n",
+      "Fence           0.012807\n",
+      "Condition1      0.010965\n",
+      "ExterCond       0.010187\n",
+      "Functional      0.008139\n",
+      "PoolQC          0.007423\n",
+      "Electrical      0.006658\n",
+      "MiscFeature     0.001687\n",
+      "MiscVal         0.001195\n",
       "Name: importance, dtype: float64\n"
      ]
     }
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 429,
    "id": "46da69d8",
    "metadata": {},
    "outputs": [
