--- a/housePriceAnaliseXGB.ipynb
+++ b/housePriceAnaliseXGB.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 33,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.multioutput import MultiOutputClassifier\n",
+    "from xgboost import XGBRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "import numpy as np\n",
@@ -20,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 34,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 35,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 36,
    "id": "06b3ed4a",
    "metadata": {},
    "outputs": [
@@ -110,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 37,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -120,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 38,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -130,71 +128,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 44,
    "id": "11e3cb74",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/sklearn/base.py:1365: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Training finished in: 5.020 seconds\n",
-      "MedinAverage error 20,628.55 dollars\n",
+      "Training finished in: 1.820 seconds\n",
+      "MedinAverage error 17,691.62 dollars\n",
       "\n",
       "Importance:\n",
       "base_feature\n",
-      "OverallQual     0.196600\n",
-      "GrLivArea       0.182282\n",
-      "Neighborhood    0.115569\n",
-      "LotArea         0.096518\n",
-      "YearRemodAdd    0.089928\n",
-      "Foundation      0.071727\n",
-      "MSSubClass      0.057885\n",
-      "Exterior1st     0.045428\n",
-      "MSZoning        0.024404\n",
-      "HeatingQC       0.021536\n",
-      "GarageQual      0.020632\n",
-      "OverallCond     0.018429\n",
-      "Fence           0.012807\n",
-      "Condition1      0.010965\n",
-      "ExterCond       0.010187\n",
-      "Functional      0.008139\n",
-      "PoolQC          0.007423\n",
-      "Electrical      0.006658\n",
-      "MiscFeature     0.001687\n",
-      "MiscVal         0.001195\n",
-      "Name: importance, dtype: float64\n"
+      "Neighborhood    0.192530\n",
+      "OverallQual     0.181827\n",
+      "PoolQC          0.098534\n",
+      "Functional      0.077514\n",
+      "GarageQual      0.070967\n",
+      "Foundation      0.068215\n",
+      "MSSubClass      0.065008\n",
+      "MSZoning        0.064726\n",
+      "Exterior1st     0.059044\n",
+      "Condition1      0.042334\n",
+      "GrLivArea       0.021947\n",
+      "ExterCond       0.010707\n",
+      "YearRemodAdd    0.008395\n",
+      "Fence           0.007648\n",
+      "MiscFeature     0.007018\n",
+      "OverallCond     0.006377\n",
+      "HeatingQC       0.005819\n",
+      "Electrical      0.004962\n",
+      "LotArea         0.004912\n",
+      "MiscVal         0.001516\n",
+      "Name: importance, dtype: float32\n"
      ]
     }
    ],
    "source": [
-    "housePriceModel = RandomForestRegressor(\n",
-    "    n_estimators=5500,\n",
-    "    max_depth=None,\n",
-    "    min_samples_split=2,\n",
-    "    min_samples_leaf=1,\n",
-    "    max_features='sqrt',\n",
-    "    bootstrap=True,\n",
+    "housePriceModelXGB = XGBRegressor(\n",
+    "    n_estimators=2000,\n",
+    "    learning_rate=0.1,\n",
+    "    max_depth=5,\n",
+    "    subsample=0.8,\n",
+    "    colsample_bytree=0.8,\n",
     "    n_jobs=-1,\n",
     "    random_state=42,\n",
+    "    device='cuda'\n",
     ")\n",
     "\n",
     "start = time.time()\n",
-    "housePriceModel.fit(X_train, Y_train)\n",
+    "housePriceModelXGB.fit(X_train, Y_train)\n",
     "end = time.time()\n",
     "\n",
     "print(f\"\\nTraining finished in: {end - start:.3f} seconds\")\n",
     "\n",
-    "predictions = housePriceModel.predict(X_test)\n",
+    "predictions = housePriceModelXGB.predict(X_test)\n",
     "\n",
     "mae = mean_absolute_error(Y_test, predictions)\n",
     "\n",
@@ -202,7 +192,7 @@
     "\n",
     "feature_importance = pd.DataFrame({\n",
     "    'feature': X.columns,\n",
-    "    'importance': housePriceModel.feature_importances_\n",
+    "    'importance': housePriceModelXGB.feature_importances_\n",
     "})\n",
     "\n",
     "feature_importance['base_feature'] = feature_importance['feature'].apply(lambda x: x.split('_')[0])\n",
@@ -215,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 40,
    "id": "46da69d8",
    "metadata": {},
    "outputs": [
@@ -223,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model mistaken by: 11.37 %\n"
+      "Model mistaken by: 10.87 %\n"
      ]
     }
    ],
