--- a/housePriceAnaliseXGB.ipynb
+++ b/housePriceAnaliseXGB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -43,19 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "06b3ed4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X table size: (1460, 110)\n",
-      "NA: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = train_df[[\n",
     "    'MSSubClass',\n",
@@ -108,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -118,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -128,54 +119,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "11e3cb74",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Training finished in: 1.820 seconds\n",
-      "MedinAverage error 17,691.62 dollars\n",
-      "\n",
-      "Importance:\n",
-      "base_feature\n",
-      "Neighborhood    0.192530\n",
-      "OverallQual     0.181827\n",
-      "PoolQC          0.098534\n",
-      "Functional      0.077514\n",
-      "GarageQual      0.070967\n",
-      "Foundation      0.068215\n",
-      "MSSubClass      0.065008\n",
-      "MSZoning        0.064726\n",
-      "Exterior1st     0.059044\n",
-      "Condition1      0.042334\n",
-      "GrLivArea       0.021947\n",
-      "ExterCond       0.010707\n",
-      "YearRemodAdd    0.008395\n",
-      "Fence           0.007648\n",
-      "MiscFeature     0.007018\n",
-      "OverallCond     0.006377\n",
-      "HeatingQC       0.005819\n",
-      "Electrical      0.004962\n",
-      "LotArea         0.004912\n",
-      "MiscVal         0.001516\n",
-      "Name: importance, dtype: float32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "housePriceModelXGB = XGBRegressor(\n",
     "    n_estimators=2000,\n",
-    "    learning_rate=0.1,\n",
+    "    learning_rate=0.01,\n",
     "    max_depth=5,\n",
     "    subsample=0.8,\n",
     "    colsample_bytree=0.8,\n",
     "    n_jobs=-1,\n",
     "    random_state=42,\n",
-    "    device='cuda'\n",
+    "    device='cuda',\n",
+    "    #early_stopping_rounds=100\n",
     ")\n",
     "\n",
     "start = time.time()\n",
@@ -205,18 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "46da69d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model mistaken by: 10.87 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Model mistaken by:\",round((mae / np.mean(Y_train)) * 100, 2), \"%\")\n",
     "#print(\"Model mistaken by:\",((mae / np.mean(Y_train)) * 100), \"%\")"
